--- a/OBNSoftwareRoot/src/OBNRNMModel/OBNRealTimeWaveformDisplay/obnrealtimewaveroot.ui
+++ b/OBNSoftwareRoot/src/OBNRNMModel/OBNRealTimeWaveformDisplay/obnrealtimewaveroot.ui
@@ -15,27 +15,26 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" rowspan="2">
-     <widget class="QTableWidget" name="tableWidget">
-      <property name="maximumSize">
-       <size>
-        <width>200</width>
-        <height>16777215</height>
-       </size>
+    <item row="0" column="0">
+     <widget class="QSplitter" name="splitter">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
       </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QWidget" name="widgetRealTimeExhibition" native="true"/>
-    </item>
-    <item row="1" column="1">
-     <widget class="QTextBrowser" name="textBrowser">
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>150</height>
-       </size>
-      </property>
+      <widget class="QTableWidget" name="tableWidget">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
+      <widget class="QTabWidget" name="tabWidget"/>
      </widget>
     </item>
    </layout>
